testsuite/tests/properties/invalid_struct_update/invalid_field.lkt
import common

class Example: FooNode implements TokenNode {
    @exported fun increment(kv: KV): KV = kv.update(nosuchfield=1)
}
